# dr-dotnet

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  DrDotnet.sln  README.md
src/DrDotnet.Profiler/profiler/: Cargo.toml
src/DrDotnet.Profiler/profiler/src/: interop.rs  lib.rs  macros.rs  profiler.rs  report.rs
src/DrDotnet.Profiler/profiler/src/profilers/: allocation_by_class_profiler.rs  exceptions_profiler.rs  gc_pause_profiler.rs  memory_leak_profiler.rs  mod.rs  runtime_pause_profiler.rs  test_profiler.rs
src/DrDotnet.Profiler/profiler/src/utils/: stack.rs
src/DrDotnet.Profilers/: .gitignore  Cargo.toml  README.md  build.rs  interop.rs  lib.rs  macros.rs  report.rs  truc.html
src/DrDotnet.Profilers/.cargo/: config.toml
src/DrDotnet.Profilers/api/: cil.rs  clr_profiler_info.rs  extensions.rs  ffi.rs  metadata_import.rs  mod.rs  profiler_info.rs  traits.rs  types.rs
src/DrDotnet.Profilers/api/cil/: helpers.rs  instruction.rs  method.rs  method_header.rs  opcode.rs  section.rs
src/DrDotnet.Profilers/api/ffi/: class.rs  hresult.rs
src/DrDotnet.Profilers/api/ffi/class/: class_factory.rs  cor_profiler_assembly_reference_provider.rs  cor_profiler_callback.rs  cor_profiler_function_control.rs  cor_profiler_function_enum.rs  cor_profiler_info.rs  cor_profiler_method_enum.rs  cor_profiler_module_enum.rs  cor_profiler_object_enum.rs  (+5 more)
src/DrDotnet.Profilers/api/traits/: cor_profiler_callback_1.rs  cor_profiler_callback_2.rs  cor_profiler_callback_3.rs  cor_profiler_callback_4.rs  cor_profiler_callback_5.rs  cor_profiler_callback_6.rs  cor_profiler_callback_7.rs  cor_profiler_callback_8.rs  cor_profiler_callback_9.rs  cor_profiler_callback_all.rs  cor_profiler_info.rs  cor_profiler_info_10.rs  cor_profiler_info_2.rs  cor_profiler_info_3.rs  cor_profiler_info_4.rs  cor_profiler_info_5.rs  cor_profiler_info_7.rs  cor_profiler_info_8.rs  cor_profiler_info_9.rs  metadata_import_trait.rs
src/DrDotnet.Profilers/benches/: tree_bench.rs
src/DrDotnet.Profilers/profilers/: Cargo.toml  allocation_by_class_profiler.rs  build.rs  cpu_hotpath_profiler.rs  duplicated_strings_profiler.rs  exceptions_profiler.rs  gc_survivors_profiler.rs  gc_survivors_profiler_2.rs  memory_leak_profiler.rs  merged_call_stacks_profiler.rs  mod.rs  pstacks_profiler.rs  runtime_pause_profiler.rs
src/DrDotnet.Profilers/profilers/allocation_by_class_profiler/: README.md
src/DrDotnet.Profilers/profilers/cpu_hotpath_profiler/: README.md  mod.rs
src/DrDotnet.Profilers/profilers/gc_survivors_profiler/: README.md  mod.rs
src/DrDotnet.Profilers/profilers/runtime_pause_profiler/: mod.rs
src/DrDotnet.Profilers/profilers/src/: interop.rs  lib.rs  macros.rs  report.rs
src/DrDotnet.Profilers/profiling_api/: Cargo.toml
src/DrDotnet.Profilers/profiling_api/src/: extensions.rs  ffi.rs  lib.rs  profiler_info.rs  traits.rs  types.rs
src/DrDotnet.Profilers/protos/: interop.proto
src/DrDotnet.Profilers/session/: mod.rs  report.rs  session_info.rs
src/DrDotnet.Profilers/utils/: define_profiler_parameter.rs  mod.rs  name_resolver.rs  object_references_receiver.rs  renderer_helper.rs  simple_hasher.rs  stack.rs  stack_snapshot_receiver.rs  tree.rs
(+420 files in other folders)
