[package]
name = "profilers"
version = "0.0.0"
authors = ["Olivier Giniaux <oginiaux@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ogxd/dr-dotnet"
build = "build.rs"

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
dashmap = "5.0"
itertools = "0.10.2"
log = "0.4.14"
simplelog = "^0.10.0"
tokio = { version = "1.21.2", features = ["full"] }
thread-priority = "0.10.0"
widestring = "0.4.2"
bitflags = "1.2.1"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"

[build-dependencies]
protobuf-codegen = "3.2.0"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"