[package]
name = "profilers"
version = "0.0.0"
authors = ["Olivier Giniaux <oginiaux@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ogxd/dr-dotnet"
build = "build.rs"

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
dashmap = "5.0"
itertools = "0.10.2"
log = "0.4.14"
simplelog = "^0.10.0"
thread-priority = "0.10.0"
widestring = "0.4.2"
bitflags = "1.2.1"
protobuf = "3.2.0"
protobuf-json-mapping = "3.2.0"
thousands = "0.2.0"
rayon = "1.7"
html-escape = "0.2.13"
deepsize = "0.2.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "tree_bench"
harness = false

[build-dependencies]
protobuf-codegen = "3.2.0"

[lib]
name = "profilers"
crate-type = ["lib", "cdylib"]
path = "lib.rs"
