[package]
name = "profiler"
version = "0.1.0"
authors = ["Olivier Giniaux <oginiaux@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ogxd/dr-dotnet"

[dependencies]
profiling_api = { version = "0.1.0", path = "../profiling_api" }
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]